tests/ui/function-contracts/invalid_target_path.expected
error: failed to resolve `NonZero :: < g32 >::unchecked_mul`: the generic arguments ::<g32> are invalid. The available implementations are:\
       NonZero::<u32>::unchecked_mul\
       NonZero::<i32>::unchecked_mul\
invalid_target_path.rs\
 |
 | #[kani::proof_for_contract(NonZero::<g32>::unchecked_mul)]
 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: failed to resolve `NonZero::unchecked_mul`: there are multiple implementations of unchecked_mul in struct `NonZero`. Found:\
       NonZero::<u32>::unchecked_mul\
       NonZero::<i32>::unchecked_mul\
invalid_target_path.rs\
 |
 | #[kani::proof_for_contract(NonZero::unchecked_mul)]
 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 |
   = help: replace `NonZero::unchecked_mul` with a specific implementation.
